Variable desciptions to app

--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,7 @@ a.action:hover {
 }
 
 #candidates.initiative .table-header .name {
-    visibility: hidden;
+    visibility: visible;
 }
 
 #candidates.initiative a.action {
