--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ header div.title {
 }
 
 h1 {
-    color: #757473;
+    /*color: #757473;*/
     font-weight: normal;
     font-size: 31px;
     line-height: 1em;
@@ -139,6 +139,7 @@ h1 {
 }
 
 h2 {
+    color: #757473;
     font-size: 18px;
     margin: 0;
 }
@@ -718,4 +719,14 @@ footer a { color: #363433; }
     h3 {
         page-break-after: avoid;
     }
+}
+
+
+
+
+div {
+  /* This is the default, you don't need to
+     explicitly declare it unless overriding
+     another declaration */
+  white-space: normal; 
 }
